# alienfx

./: GNUmakecore.in  GNUmakefile  README.md  alienfx-uptime  alienfx.c  alienfx.h  config.h.in  configure  configure.ac  fgetstr.c  fgetstr.h  stoss.c  stoss.h
man1/: alienfx-uptime.1  alienfx.1
